--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -679,11 +679,11 @@ header {
 /* الصورة (الحل الحقيقي هنا) */
 .episode-card img {
   width: 100%;
-  aspect-ratio: 16 / 9;   /* 🔥 حل احترافي بدل height */
+  aspect-ratio: 18 / 10;   /* 🔥 أكبر قليلًا */
   object-fit: cover;
-  object-position: center;
   display: block;
 }
+
 
 /* عنوان الحلقة */
 .episode-title {
