--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -358,6 +358,18 @@ header {
         );
     }
 }
+/* ================================== */
+/*  Hero Slider Logic                 */
+/* ================================== */
+
+.hero-bg {
+    opacity: 0;
+    transition: opacity 0.8s ease;
+}
+
+.hero-bg.active {
+    opacity: 1;
+}
 
 
 /* ================================== */
